--- a/composer.json
+++ b/composer.json
@@ -26,13 +26,13 @@
         }
     },
     "require": {
-        "php": ">=5.6",
+        "php": ">=7.2",
         "simplesamlphp/composer-module-installer": "~1.1",
+        "simplesamlphp/simplesamlphp": "dev-master",
         "webmozart/assert": "~1.4"
     },
     "require-dev": {
-        "simplesamlphp/simplesamlphp": "^1.18",
-        "simplesamlphp/simplesamlphp-test-framework": "~0.0.15"
+        "simplesamlphp/simplesamlphp-test-framework": "~0.1.0"
     },
     "extra": {
         "ssp-mixedcase-module-name": "memcacheMonitor"
