--- a/routing/routes/routes.yml
+++ b/routing/routes/routes.yml
@@ -1,2 +1,3 @@
-memcacheMonitor-main: path: /
+memcacheMonitor-main:
+    path: /
     defaults:   { _controller: 'SimpleSAML\Module\memcacheMonitor\Controller\MemcacheMonitorController::main' }
