--- a/composer.json
+++ b/composer.json
@@ -31,13 +31,13 @@
         }
     },
     "require": {
-        "php": ">=7.2",
+        "php": ">=7.4",
+        "simplesamlphp/assert": "~0.1.0",
         "simplesamlphp/composer-module-installer": "~1.1",
-        "simplesamlphp/simplesamlphp": "dev-master",
-        "webmozart/assert": "~1.4"
+        "simplesamlphp/simplesamlphp": "dev-master"
     },
     "require-dev": {
-        "simplesamlphp/simplesamlphp-test-framework": "~0.2.5"
+        "simplesamlphp/simplesamlphp-test-framework": "~1.0.3"
     },
     "extra": {
         "ssp-mixedcase-module-name": "memcacheMonitor"
