--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
     },
     "autoload": {
         "psr-4": {
-            "SimpleSAML\\Module\\memcacheMonitor\\": "lib/"
+            "SimpleSAML\\Module\\memcacheMonitor\\": "src/"
         }
     },
     "autoload-dev": {
@@ -36,12 +36,12 @@
     },
     "require": {
         "php": ">=7.4 || ^8.0",
-        "simplesamlphp/assert": "~0.2.7",
+        "simplesamlphp/assert": "~0.3.0",
         "simplesamlphp/composer-module-installer": "~1.1",
-        "simplesamlphp/simplesamlphp": "^2.0.0-beta.2"
+        "simplesamlphp/simplesamlphp": "^2.0.0-beta.11"
     },
     "require-dev": {
-        "simplesamlphp/simplesamlphp-test-framework": "~1.1.4"
+        "simplesamlphp/simplesamlphp-test-framework": "~1.2.1"
     },
     "extra": {
         "ssp-mixedcase-module-name": "memcacheMonitor"
