--- a/composer.json
+++ b/composer.json
@@ -39,13 +39,14 @@
     },
     "require": {
         "php": "^8.1",
-        "simplesamlphp/assert": "^1.0",
-        "simplesamlphp/composer-module-installer": "^1.3",
-        "simplesamlphp/simplesamlphp": "^2.1",
-        "symfony/http-foundation": "^6.4"
+
+        "simplesamlphp/assert": "~1.8.1",
+        "simplesamlphp/composer-module-installer": "~1.4.0",
+        "simplesamlphp/simplesamlphp": "~2.4.0",
+        "symfony/http-foundation": "~6.4.0"
     },
     "require-dev": {
-        "simplesamlphp/simplesamlphp-test-framework": "^1.5"
+        "simplesamlphp/simplesamlphp-test-framework": "~1.9.2"
     },
     "extra": {
         "ssp-mixedcase-module-name": "memcacheMonitor"
