--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -165,7 +165,8 @@ jobs:
           php-version: '8.4'
           tools: composer, composer-require-checker, composer-unused, phpcs, psalm
           # optional performance gain for psalm: opcache
-          extensions: ctype, date, dom, fileinfo, filter, hash, intl, mbstring, opcache, openssl, pcre, posix, session, spl, xml
+          extensions: ctype, date, dom, fileinfo, filter, hash, intl, mbstring, opcache, openssl, \
+                      pcre, posix, session, spl, xml
 
       - name: Setup problem matchers for PHP
         run: echo "::add-matcher::${{ runner.tool_cache }}/php.json"
