--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -116,7 +116,8 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php-versions }}
-          extensions: ctype, date, dom, fileinfo, filter, hash, intl, mbstring, openssl, pcre, posix, session, spl, xml
+          extensions: ctype, date, dom, fileinfo, filter, hash, intl, mbstring, openssl, pcre, posix, session,\
+            spl, xml, zip
           tools: composer
           ini-values: error_reporting=E_ALL
           coverage: none
