Add memcached as a hard dependency; it's not, but this module makes no sense without it

--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,7 @@
     },
     "require": {
         "php": "^8.2",
+        "ext-memcached": "*",
 
         "simplesamlphp/assert": "~1.9.1",
         "simplesamlphp/composer-module-installer": "~1.5.0",
