--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -194,7 +194,7 @@ jobs:
         run: composer-require-checker check --config-file=tools/composer-require-checker.json composer.json
 
       - name: Check code for unused dependencies in composer.json
-        run: composer-unused
+        run: composer-unused --excludePackage=ext-memcached
 
       - name: PHP Code Sniffer
         run: vendor/bin/phpcs
